@@ -1,3 +1,8 @@
+2025-01-03 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* index.php:
+	  Announce SDCC 4.4.0 RC1.
+
 2024-10-27 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* snapshots.desc/i586-mingw32msvc.desc,
